UIの英語化に関する修正。(2)

--- a/tests/testdata/htdocs/test1/test1.canvas.html
+++ b/tests/testdata/htdocs/test1/test1.canvas.html
@@ -73,13 +73,13 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 		<li data-broccoli-instance-path="/fields.main@4/fields.main@0/fields.sample_loop1@0/fields.sample_loop2@0/fields.sample_loop3@0" data-broccoli-sub-mod-name="sample_loop3" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="sample_loop3">loop3:
 			<div><p>だはぁぁぁぁぁ</p>
 </div>
-			<div><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;">(ダブルクリックしてテキストを編集してください)</span></div>
+			<div><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;">(Double click to edit text)</span></div>
 		</li>
 
 		<li data-broccoli-instance-path="/fields.main@4/fields.main@0/fields.sample_loop1@0/fields.sample_loop2@0/fields.sample_loop3@1" data-broccoli-sub-mod-name="sample_loop3" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="sample_loop3">loop3:
 			<div><p>どぉぉぉ</p>
 </div>
-			<div><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;">(ダブルクリックしてテキストを編集してください)</span></div>
+			<div><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;">(Double click to edit text)</span></div>
 		</li>
 <div data-broccoli-instance-path="/fields.main@4/fields.main@0/fields.sample_loop1@0/fields.sample_loop2@0/fields.sample_loop3@2" data-broccoli-mod-id="testMod1:parts/deeploop" data-broccoli-sub-mod-name="sample_loop3" data-broccoli-is-appender="yes" style="height:auto;max-height:calc(9 * 6px);overflow:hidden;padding:5px 15px;background-color:#F4FFFC;border:3px solid transparent;border-radius:0px;font-family: &quot;Hiragino Kaku Gothic ProN&quot;, Meiryo, Verdana, sans-serif;font-size:14px;color:#189AA3;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">Double click here to add element</div>
 		</ul>
@@ -91,19 +91,19 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 		<li data-broccoli-instance-path="/fields.main@4/fields.main@0/fields.sample_loop1@0/fields.sample_loop2@1/fields.sample_loop3@0" data-broccoli-sub-mod-name="sample_loop3" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="sample_loop3">loop3:
 			<div><p>マークダウンコード。そのままHTMLに変換されます。</p>
 </div>
-			<div><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;">(ダブルクリックしてテキストを編集してください)</span></div>
+			<div><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;">(Double click to edit text)</span></div>
 		</li>
 
 		<li data-broccoli-instance-path="/fields.main@4/fields.main@0/fields.sample_loop1@0/fields.sample_loop2@1/fields.sample_loop3@1" data-broccoli-sub-mod-name="sample_loop3" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="sample_loop3">loop3:
 			<div><p>テスト3ああああ</p>
 </div>
-			<div><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;">(ダブルクリックしてテキストを編集してください)</span></div>
+			<div><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;">(Double click to edit text)</span></div>
 		</li>
 
 		<li data-broccoli-instance-path="/fields.main@4/fields.main@0/fields.sample_loop1@0/fields.sample_loop2@1/fields.sample_loop3@2" data-broccoli-sub-mod-name="sample_loop3" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="sample_loop3">loop3:
 			<div><p>ループして</p>
 </div>
-			<div><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;">(ダブルクリックしてテキストを編集してください)</span></div>
+			<div><span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;">(Double click to edit text)</span></div>
 		</li>
 <div data-broccoli-instance-path="/fields.main@4/fields.main@0/fields.sample_loop1@0/fields.sample_loop2@1/fields.sample_loop3@3" data-broccoli-mod-id="testMod1:parts/deeploop" data-broccoli-sub-mod-name="sample_loop3" data-broccoli-is-appender="yes" style="height:auto;max-height:calc(9 * 6px);overflow:hidden;padding:5px 15px;background-color:#F4FFFC;border:3px solid transparent;border-radius:0px;font-family: &quot;Hiragino Kaku Gothic ProN&quot;, Meiryo, Verdana, sans-serif;font-size:14px;color:#189AA3;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">Double click here to add element</div>
 		</ul>
@@ -118,7 +118,7 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 	</ul>
 	</li>
 
-	<li data-broccoli-instance-path="/fields.main@4/fields.main@0/fields.sample_loop1@2" data-broccoli-sub-mod-name="sample_loop1" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="sample_loop1">loop1: <span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;">(ダブルクリックしてマークダウンを編集してください)</span>	<ul>
+	<li data-broccoli-instance-path="/fields.main@4/fields.main@0/fields.sample_loop1@2" data-broccoli-sub-mod-name="sample_loop1" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="sample_loop1">loop1: <span style="color:#999;background-color:#ddd;font-size:10px;padding:0 1em;max-width:100%;overflow:hidden;">(Double click to edit Markdown)</span>	<ul>
 <div data-broccoli-instance-path="/fields.main@4/fields.main@0/fields.sample_loop1@2/fields.sample_loop2@0" data-broccoli-mod-id="testMod1:parts/deeploop" data-broccoli-sub-mod-name="sample_loop2" data-broccoli-is-appender="yes" style="height:auto;max-height:calc(9 * 6px);overflow:hidden;padding:5px 15px;background-color:#F4FFFC;border:3px solid transparent;border-radius:0px;font-family: &quot;Hiragino Kaku Gothic ProN&quot;, Meiryo, Verdana, sans-serif;font-size:14px;color:#189AA3;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">Double click here to add element</div>
 	</ul>
 	</li>
