maxLength のサンプルを追加

--- a/tests/testdata/modules1/dev/module_parent/template.html
+++ b/tests/testdata/modules1/dev/module_parent/template.html
@@ -1,4 +1,4 @@
 <div class="module-parent">
-    <div>{&{"module":{"name":"main1", "enabledChildren": "dev/module_parent__child"}}&}</div>
+    <div>{&{"module":{"name":"main1", "enabledChildren": "dev/module_parent__child", "maxLength": 3}}&}</div>
     <div>{&{"module":{"name":"main2"}}&}</div>
 </div>
