px2style のモーダルが開いている間、 ESCキー操作のイベント処理を無視するようにした。(2) -> px2style が古くてもスクリプトエラーが出ないように修正

--- a/tests/testdata/modules1/dev/custom1/template.html
+++ b/tests/testdata/modules1/dev/custom1/template.html
@@ -1,5 +1,5 @@
 <div>
     <p>custom1 field</p>
-{&{"input":{"type":"custom1","name":"main","description":"これはカスタムフィールドです。\n\nカスタムフィールドは、broccoli-html-editor の初期化時に設定して、追加することができます。"}}&}
+{&{"input":{"type":"custom1","name":"main","description":"これはカスタムフィールドです。\n\nカスタムフィールドは、broccoli-html-editor の初期化時に設定して、追加することができます。\n\n<a href='javascript:void(0);' onclick='px2style.modal({});'>カスタムフィールドからモーダルダイアログを開くテスト</a>"}}&}
     <p>/custom1 field</p>
 </div>
