imageフィールドに、`format` オプションを追加した。

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -36,6 +36,7 @@
 
     <div></div>
 </div>
+<p><img src="./index_files/resources/resize_sample.webp" /></p>
 <div class="cols unit">
 	<div class="cols-col cols-1of2"><div class="cols-pad">
 <p>Left 1</p>
