--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -19,6 +19,7 @@
 
     <div></div>
 </div>
+<p><img src="./index_files/resources/resize_sample.webp" /></p>
 <div class="cols unit">
 	<div class="cols-col cols-1of2"><div class="cols-pad">
 <p>Left 1</p>
