ダークモード用のスタイルをバンドルした。(2)

--- a/tests/testdata/htdocs/index.html
+++ b/tests/testdata/htdocs/index.html
@@ -41,6 +41,15 @@
 		<!-- broccoli -->
 		<script src="./libs/broccoli.js"></script>
 
+		<!-- darkmode -->
+		<!-- <style>
+			:root {
+				--px2-text-color: #ddd;
+				--px2-background-color: #333;
+			}
+		</style>
+		<link rel="stylesheet" href="./libs/themes/darkmode.css"></script> -->
+
 		<!-- main.js -->
 		<script src="./index_files/main.js" type="text/javascript"></script>
 		<script type="text/javascript">
