ダークモード用のスタイルをバンドルした。(3)

--- a/tests/testdata/htdocs/index.html
+++ b/tests/testdata/htdocs/index.html
@@ -39,6 +39,7 @@
 		<script src="/biflora/biflora.js" type="text/javascript"></script>
 
 		<!-- broccoli -->
+		<link rel="stylesheet" href="./libs/broccoli.css" />
 		<script src="./libs/broccoli.js"></script>
 
 		<!-- darkmode -->
