locked.contents, locked.delete が設定されているインスタンスは、編集画面から編集/削除できないようになった。

--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -2,7 +2,8 @@
 	html, body{
 		background-color: #f7f5f3 !important;
 	}
-</style><div class="mod-multi-language">
+</style><p>Test text.</p>
+<div class="mod-multi-language">
     <p>編集画面が多言語対応したモジュールのサンプルです。</p>
     <div></div>
 
