--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -38,15 +38,26 @@
     <div></div>
 </div>
 <p><img src="./index_files/resources/resize_sample.webp" /></p>
+<ul>
+
+	<li>List Item 1 (Instance Lock Test)</li>
+
+	<li>List Item 2</li>
+
+	<li>List Item 3</li>
+
+	<li>List Item 4</li>
+
+</ul>
 <div class="cols unit">
 	<div class="cols-col cols-1of2"><div class="cols-pad">
-<p>Left 1</p>
+<p>Left 1 (parent locked)</p>
 <p>Left 2</p>
 <p>Left 3</p>
 <p>Left 4</p>
 	</div></div>
 	<div class="cols-col cols-1of2 cols-last"><div class="cols-pad">
-<p>Right 1</p>
+<p>Right 1 (parent locked)</p>
 <p>Right 2</p>
 <p>Right 3</p>
 <p>Right 4</p>
