インスタンスロック時のプレビューに関する不具合を修正

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -55,6 +55,9 @@
 <p>Left 2</p>
 <p>Left 3</p>
 <p>Left 4</p>
+<div>default1</div>
+<div>select2</div>
+<div>radio3</div>
 	</div></div>
 	<div class="cols-col cols-1of2 cols-last"><div class="cols-pad">
 <p>Right 1 (parent locked)</p>
