--- a/tests/testdata/htdocs/index.html
+++ b/tests/testdata/htdocs/index.html
@@ -32,6 +32,22 @@
 		<!-- Ace Editor (Optional) -->
 		<script src="./index_files/libs/ace-builds/src-noconflict/ace.js"></script>
 
+		<!-- CodeMirror (Optional) -->
+		<link rel=stylesheet href="./index_files/libs/codemirror/lib/codemirror.css" />
+		<link rel=stylesheet href="./index_files/libs/codemirror/theme/ambiance.css" />
+		<link rel=stylesheet href="./index_files/libs/codemirror/theme/mdn-like.css" />
+		<link rel=stylesheet href="./index_files/libs/codemirror/theme/monokai.css" />
+		<link rel=stylesheet href="./index_files/libs/codemirror/theme/eclipse.css" />
+		<link rel=stylesheet href="./index_files/libs/codemirror/theme/elegant.css" />
+		<script src="./index_files/libs/codemirror/lib/codemirror.js"></script>
+		<script src="./index_files/libs/codemirror/mode/xml/xml.js"></script>
+		<script src="./index_files/libs/codemirror/mode/javascript/javascript.js"></script>
+		<script src="./index_files/libs/codemirror/mode/css/css.js"></script>
+		<script src="./index_files/libs/codemirror/mode/sass/sass.js"></script>
+		<script src="./index_files/libs/codemirror/mode/markdown/markdown.js"></script>
+		<script src="./index_files/libs/codemirror/mode/php/php.js"></script>
+		<script src="./index_files/libs/codemirror/mode/htmlmixed/htmlmixed.js"></script>
+
 		<!-- socket.io -->
 		<script src="/socket.io/socket.io.js" type="text/javascript"></script>
 
@@ -39,7 +55,6 @@
 		<script src="/biflora/biflora.js" type="text/javascript"></script>
 
 		<!-- broccoli -->
-		<link rel="stylesheet" href="./libs/broccoli.css" />
 		<script src="./libs/broccoli.js"></script>
 
 		<!-- ---------------- lightmode ---------------- -->
