アペンダーを選択した状態でコピーすると、エラーが発生する不具合を修正した。

--- a/tests/testdata/htdocs/index.html
+++ b/tests/testdata/htdocs/index.html
@@ -21,6 +21,7 @@
 				<li><a href="javascript:window.main.broccoli.remove(function(res){console.log(res);alert('remove done.');});">remove</a></li>
 				<li><a href="javascript:window.main.broccoli.find();">find</a></li>
 				<li><a href="javascript:alert(window.main.broccoli.getSelectedInstance());">getSelectedInstance</a></li>
+				<li><a href="javascript:window.main.broccoli.selectedInstanceToJsonString(function(json){alert(json);});">selectedInstanceToJsonString</a></li>
 				<li><a href="javascript:window.main.broccoli.editInstance();">editInstance</a></li>
 				<li><a href="javascript:window.main.broccoli.insertInstance();">insertInstance</a></li>
 			</ul>
