インスタンスツリービューのプレビューに関する修正

--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -21,7 +21,11 @@
     <div></div>
 </div>
 <p><img src="./index_files/resources/resize_sample.webp" /></p>
-<ul>
+<div style="font-size: 32px; font-weight: bold;">
+	<p>インラインCSSで大きくされた文字です。</p>
+	<p>この行には、<a href="https://pickles2.com/">リンク</a>が含まれています。</p>
+	<p>この行には、<button type="button">ボタン</button>が含まれています。</p>
+</div><ul>
 
 	<li>List Item 1 (Instance Lock Test)</li>
 
