インスタンスプレビューに関する修正

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -38,10 +38,17 @@
     <div></div>
 </div>
 <p><img src="./index_files/resources/resize_sample.webp" /></p>
-<div style="font-size: 32px; font-weight: bold;">
+<div style="font-size: 24px; font-weight: bold;">
 	<p>インラインCSSで大きくされた文字です。</p>
 	<p>この行には、<a href="https://pickles2.com/">リンク</a>が含まれています。</p>
 	<p>この行には、<button type="button">ボタン</button>が含まれています。</p>
+	<p><input type="text" value="これは input 要素です。" /></p>
+	<p>JavaScriptも埋め込まれています。</p>
+	<script>
+		console.log('***** Content Script Alert. *****');
+		// alert('***** Content Script Alert. *****');
+	</script>
+	<div onclick="alert('clicked');">onclick 属性が定義されています。</div>
 </div><ul>
 
 	<li>List Item 1 (Instance Lock Test)</li>
