--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -39,6 +39,12 @@
 </div>
 <p><img src="./index_files/resources/resize_sample.webp" /></p>
 <div style="font-size: 24px; font-weight: bold;">
+	<h1>H1 Heading</h1>
+	<h2>H2 Heading</h2>
+	<h3>H3 Heading</h3>
+	<h4>H4 Heading</h4>
+	<h5>H5 Heading</h5>
+	<h6>H6 Heading</h6>
 	<p>インラインCSSで大きくされた文字です。</p>
 	<p>この行には、<a href="https://pickles2.com/">リンク</a>が含まれています。</p>
 	<p>この行には、<button type="button">ボタン</button>が含まれています。</p>
