--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -21,10 +21,20 @@
     <div><div data-broccoli-instance-path="/fields.main@2/fields.module1@0" data-broccoli-mod-id="testMod1:dev/multilang" data-broccoli-is-appender="yes" style="height:auto;max-height:calc(13.3 * 6px);overflow:hidden;padding:13px;background-color:#F5FAFF;border:3px solid transparent;border-radius:0px;font-family: &quot;Hiragino Kaku Gothic ProN&quot;, Meiryo, Verdana, sans-serif;font-size:13.3px;color:#3871E0;text-align:center;box-sizing:border-box;clear:both;white-space:nowrap;margin:10px 0;">Drop a module here</div></div>
 </div>
 <p data-broccoli-instance-path="/fields.main@3" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="Image Resizer"><img src="data:image/webp;base64,{broccoli-html-editor-resource-baser64:{45aac1d72dea717a7308d9672787fdc2}}" /></p>
-<div style="font-size: 32px; font-weight: bold;" data-broccoli-instance-path="/fields.main@4" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">
+<div style="font-size: 24px; font-weight: bold;" data-broccoli-instance-path="/fields.main@4" data-broccoli-area-size-detection="deep" data-broccoli-module-name="Multi Text">
+	<h1>H1 Heading</h1>
+	<h2>H2 Heading</h2>
+	<h3>H3 Heading</h3>
+	<h4>H4 Heading</h4>
+	<h5>H5 Heading</h5>
+	<h6>H6 Heading</h6>
 	<p>インラインCSSで大きくされた文字です。</p>
 	<p>この行には、<a href="https://pickles2.com/">リンク</a>が含まれています。</p>
 	<p>この行には、<button type="button">ボタン</button>が含まれています。</p>
+	<p><input type="text" value="これは input 要素です。" /></p>
+	<p>JavaScriptも埋め込まれています。</p>
+	<div style="color:#eee; background-color: #f00; border: 3px solid #f00; text-align: center;">script element</div>
+	<div onclick="alert('clicked');">onclick 属性が定義されています。</div>
 </div><ul data-broccoli-instance-path="/fields.main@5" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="リスト - List">
 
 	<li data-broccoli-instance-path="/fields.main@5/fields.loop@0" data-broccoli-sub-mod-name="loop" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="loop">List Item 1 (Instance Lock Test)</li>
