インスタンスプレビューに関する修正 (3)

--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -35,6 +35,12 @@
 	<p>JavaScriptも埋め込まれています。</p>
 	<div style="color:#eee; background-color: #f00; border: 3px solid #f00; text-align: center;">script element</div>
 	<div onclick="alert('clicked');">onclick 属性が定義されています。</div>
+	<table>
+		<tr>
+			<th>cell</th>
+			<td>テーブルも含まれます。</td>
+		</tr>
+	</table>
 </div><ul data-broccoli-instance-path="/fields.main@5" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="リスト - List">
 
 	<li data-broccoli-instance-path="/fields.main@5/fields.loop@0" data-broccoli-sub-mod-name="loop" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="loop">List Item 1 (Instance Lock Test)</li>
