--- a/tests/testdata/htdocs/test2/index.html
+++ b/tests/testdata/htdocs/test2/index.html
@@ -38,6 +38,12 @@
 		// alert('***** Content Script Alert. *****');
 	</script>
 	<div onclick="alert('clicked');">onclick 属性が定義されています。</div>
+	<table>
+		<tr>
+			<th>cell</th>
+			<td>テーブルも含まれます。</td>
+		</tr>
+	</table>
 </div><ul>
 
 	<li>List Item 1 (Instance Lock Test)</li>
