初期化時のコンテンツの無害化に関する不具合を修正した。

--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -34,7 +34,7 @@
 	<p><input type="text" value="これは input 要素です。" /></p>
 	<p>JavaScriptも埋め込まれています。</p>
 	<div style="color:#eee; background-color: #f00; border: 3px solid #f00; text-align: center;">script element</div>
-	<div onclick="alert('clicked');">onclick 属性が定義されています。</div>
+	<div data-test2-attr="test2" onclick="alert('clicked');" data-test-attr="test">onclick 属性が定義されています。</div>
 	<table>
 		<tr>
 			<th>cell</th>
