--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -54,7 +54,7 @@
 		console.log('***** Content Script Alert. *****');
 		// alert('***** Content Script Alert. *****');
 	</script>
-	<div onclick="alert('clicked');">onclick 属性が定義されています。</div>
+	<div data-test2-attr="test2" onclick="alert('clicked');" data-test-attr="test">onclick 属性が定義されています。</div>
 	<table>
 		<tr>
 			<th>cell</th>
