--- a/tests/testdata/htdocs/index.html
+++ b/tests/testdata/htdocs/index.html
@@ -4,6 +4,18 @@
 		<meta charset="utf-8">
 		<title>Broccoli TEST</title>
 		<link rel="stylesheet" href="./index_files/css.css" />
+		<style>
+:root {
+	--px2-main-color: #00a0e6;
+	--px2-text-color: #333;
+	--px2-background-color: #f9f9f9;
+}
+body {
+	color: var(--px2-text-color);
+	background-color: var(--px2-background-color);
+}
+
+		</style>
 	</head>
 	<body>
 		<div class="instanceTreeView"></div>
@@ -94,6 +106,10 @@
 				color: #ddf;
 			}
 		</style> -->
+
+		<!-- custom fields -->
+		<script src="./index_files/customFields/custom1/custom1.js" type="text/javascript"></script>
+		<script src="./index_files/customFields/custom2/custom2.js" type="text/javascript"></script>
 
 		<!-- main.js -->
 		<script src="./index_files/main.js" type="text/javascript"></script>
