`extra` オプションを追加した。

--- a/tests/testdata/htdocs/editpage/index.html
+++ b/tests/testdata/htdocs/editpage/index.html
@@ -667,6 +667,8 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 </div>
 
 
+<div>Getting extra data: bar</div>
+
 </div>
 <div class="dropdown" id="attr text id">
 	<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
