--- a/tests/testdata/htdocs/test2/index.canvas.html
+++ b/tests/testdata/htdocs/test2/index.canvas.html
@@ -641,6 +641,8 @@ moduleフィールドを追加。<code>input type:module</code> は廃止。</p>
 
 <div class="twig_template-is_canvas">これは編集画面にしか表示されない要素です。</div>
 
+<div>Getting extra data: bar</div>
+
 </div>
 <div class="dropdown" id="attr text id" data-broccoli-instance-path="/fields.main@40" data-broccoli-area-size-detection="shallow" data-broccoli-module-name="Dropdown">
 	<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
